[package]
name = "rust-wasm-lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
rand = "0.9.1"
getrandom = { version = "0.3", features = ["wasm_js"] } # Ensure this version matches what rand 0.9.1 expects or is compatible

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"